<resources>
    <string name="app_name">Letras para volar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="program_info">Información del programa</string>
    <string name="news">Noticias</string>
    <string name="games">Juegos</string>
    <string name="participate">Participa con nosotros</string>
    <string name="report">Gacetita</string>
    <string name="portal">Portal</string>
    <string name="amigos">Amigos</string>
    <string name="nuevas">Nuevas</string>
    <string name="populares">Populares</string>
    <string name="tema_del_mes">Tema del mes</string>
    <string name="todos">Todos</string>
    <string name="prehispanico">Prehispánico</string>
    <string name="revolucion">Revolución</string>
    <string name="horror">Horror</string>
    <string name="colonia">Colonia</string>

    <string name="legends_title">Leyendas</string>
    <string name="mapa">Mapa</string>
    <string name="buscar">Buscar</string>
    <string name="news_title">Novedades</string>
    <string name="collections_title">Colecciones</string>
    <string name="poesia">Poesía</string>
    <string name="ensayo">Ensayo</string>
    <string name="narrativa">Narrativa</string>
    <string name="library_title">Biblioteca</string>
    <string name="download">Descargar</string>
    <string name="description">Descripción:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="more">más...</string>
    <string name="idiom">Idioma:</string>
    <string name="category">Categoría:</string>
    <string name="publisher">Editorial:</string>
    <string name="published">Publicado:</string>
    <string name="information">Información:</string>
    <string name="size">Tamaño:</string>
    <string name="pages">Páginas:</string>
    <string name="tags">Etiquetas:</string>
    <string name="requirements">Requisitos:</string>
    <string name="related">Relacionados:</string>
    <string name="add_to_favorites">Favorito</string>
    <string name="favorites">Favoritos</string>
    <string name="downloaded">Descargados</string>
    <string name="lecturas">Lecturas</string>
    <string name="libros">Libros</string>
    <string name="international">Internacionalización</string>
    <string name="program_description">Letras para Volar es un programa de fomento a la lectura para niños y jóvenes. Es el primer proyecto de colaboración
          internacional entre la Universidad de Guadalajara y la Fielding Graduate University.
          Es un programa para el cambio social que relaciona a estudiantes y profesores de ambas instituciones para servir a
          las comunidades mexicanas a través de estrategias que promuevan el amor por las letras, el amor por la ciencia,
          las raíces culturales ancestrales, la conciencia social y la solidaridad. Busca el desarrollo del potencial humano
          de la niñez mediante la consolidación de sus habilidades intelectuales de pensamiento crítico, solución de problemas
          y el desarrollo de sus habilidades comunicativas.</string>
    <string name="program_title">Programa Universitario de Fomento a la Lectura Letras para volar</string>
    <string name="title_activity_maps">Map</string>
    <string name="open">Abrir</string>
    <string name="books_title">Libros</string>
    <string name="no_libros">No tienes libros marcados como favoritos</string>
    <string name="no_leyendas">No tienes leyendas marcadas como favoritas</string>
    <string name="no_leyendas_descargadas">No tienes leyendas descargadas</string>
    <string name="no_libros_descargados">No tienes libros descargados</string>
    <string name="atras">Atrás</string>
    <string name="jugar">¡Jugar!</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver_a_jugar">Volver a jugar</string>
    <string name="terminar">Terminar</string>
    <string name="compartir">Compartir puntuación</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="enviar">ENVIAR</string>
    <string name="unete">¡Únete a nuestro equipo!</string>
    <string name="inscribete">Inscríbete como voluntario o realiza tu servicio social con nosotros. Puedes impartir talleres a los niños en escuelas u hospitales, formar parte del círculo de lectura o hacer tus prácticas profesionales. También puedes formar parte del programa de internacionalización.</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="procedencia">Escuela o lugar de procedencia</string>
    <string name="mensaje">Mensaje</string>
    <string name="mensaje_enviado">Se ha enviado tu mensaje</string>
    <string name="required_field">Campo requerido</string>
    <string name="participa">Participa</string>
    <string name="tests">Curioseando</string>
    <string name="nahuatlismos">Nahuatlismos</string>
    <string name="gacetita">Gacetita</string>
    <string name="leer_completo">Leer nota completa</string>
    <string name="resultado">Resultado:</string>
    <string name="noticias">Noticias</string>
</resources>
