<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/fondo_papel"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar_full_no_scroll" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical"
            android:paddingRight="@dimen/extra_small_padding"
            android:paddingLeft="@dimen/extra_small_padding"
            android:paddingBottom="@dimen/extra_small_padding"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/small_padding"
                android:text="@string/unete"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/extra_small_padding"
                android:text="@string/inscribete"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/extra_small_padding"
                    android:text="@string/nombre"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <EditText
                    android:id="@+id/nombre_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:background="@drawable/participa_edittext"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:padding="@dimen/extra_small_padding"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/extra_small_padding"
                    android:text="@string/correo"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <EditText
                    android:id="@+id/correo_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:background="@drawable/participa_edittext"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:padding="@dimen/extra_small_padding"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/extra_small_padding"
                    android:text="@string/procedencia"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <EditText
                    android:id="@+id/procedencia_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:background="@drawable/participa_edittext"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:padding="@dimen/extra_small_padding"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/extra_small_padding"
                    android:text="@string/mensaje"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <EditText
                    android:id="@+id/mensaje_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/participa_edittext"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:padding="@dimen/extra_small_padding"/>
            </LinearLayout>

            <Button
                android:id="@+id/enviar_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/enviar"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/participa_send"
                android:layout_centerInParent="true"
                android:onClick="onClick"/>
        </LinearLayout>

        <include android:id="@+id/modal_game_over"
            layout="@layout/modal_game_over"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>