<LinearLayout
    android:id="@+id/bottom_nav_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/bottom_nav"
        android:weightSum="3">
        <RelativeLayout
            android:id="@+id/legends_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:layout_above="@+id/legends_txt"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/leyendas"
                android:background="@null"/>
            <TextView
                android:id="@+id/legends_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/legends_title"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/collections_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:layout_above="@+id/collections_txt"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/colecciones"
                android:background="@null"/>
            <TextView
                android:id="@+id/collections_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/collections_title"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/library_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:layout_above="@+id/library_txt"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/biblioteca"
                android:background="@null"/>
            <TextView
                android:id="@+id/library_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/library_title"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>