<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/fondo_papel">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_full" />

        <com.clickaboom.letrasparavolar.views.StickyScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar"
                    android:background="@color/white"
                    android:weightSum="2"
                    android:layout_marginBottom="5dp"
                    android:tag="sticky">
                    <TextView
                        android:id="@+id/information_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/small_padding"
                        android:paddingRight="@dimen/small_padding"
                        android:text="@string/program_info"
                        android:textColor="@color/white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        android:background="@drawable/nav_subcategories_button"
                        android:gravity="center"
                        android:clickable="true"/>
                    <TextView
                        android:id="@+id/international_txt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/small_padding"
                        android:paddingRight="@dimen/small_padding"
                        android:text="@string/international"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@drawable/nav_subcategories_button"
                        android:gravity="center"
                        android:clickable="true"/>
                </LinearLayout>

                <!-- Info -->
                <LinearLayout
                    android:id="@+id/info_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/medium_padding"
                        android:paddingRight="@dimen/medium_padding"
                        android:paddingLeft="@dimen/medium_padding"
                        android:text="@string/program_title"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/medium_padding"
                        android:text="Universidad de Guadalajara"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/book_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:clickable="false"
                        android:src="@drawable/nino_info"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/medium_padding"
                        android:text="@string/program_description"
                        android:textSize="@dimen/medium_small"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/inter_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginLeft="@dimen/mini_padding"
                        android:layout_marginRight="@dimen/mini_padding"
                        android:layout_marginBottom="@dimen/mini_padding"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>
        </com.clickaboom.letrasparavolar.views.StickyScrollView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>